tests/neg/missing-implicit-3.check
-- [E007] Type Mismatch Error: tests/neg/missing-implicit-3.scala:6:44 -------------------------------------------------
6 |val d: scala.concurrent.duration.Duration = (10, DAYS) // error
  |                                            ^^^^^^^^^^
  |                                            Found:    (Int, java.util.concurrent.TimeUnit)
  |                                            Required: concurrent².duration.Duration
  |
  |                                            where:    concurrent  is a package in package java.util
  |                                                      concurrent² is a package in package scala
  |
  |
  |                                            The following import might fix the problem:
  |
  |                                              import concurrent.duration.pairIntToDuration
  |
  |
  | longer explanation available when compiling with `-explain`
-- [E008] Not Found Error: tests/neg/missing-implicit-3.scala:8:48 -----------------------------------------------------
8 |val d2: scala.concurrent.duration.Duration = 10.days // error
  |                                             ^^^^^^^
  |                            value days is not a member of Int, but could be made available as an extension method.
  |
  |                            The following import might fix the problem:
  |
  |                              import concurrent.duration.DurationInt
  |
